--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@100&display=swap');
 
 html, body, [class*="css"] {
-    font-family: 'Times-New-Roman';
+    font-family: 'Mulish';
     font-size: 18px;
     font-weight: 500;
     color: #091747;
